feat: added icons, move fonts
* Now App using icon.
* Fonts moved to src/main/resources/org/chekhov/http_poller_ui/fonts
* Changed pom.xml. Added platform packagers.
* Created GitHub workflows.